--- a/src/main.css
+++ b/src/main.css
@@ -9,8 +9,10 @@ h1 {
 }
 .main {
   background-color: rgb(200, 237, 250);
-  max-width: 600px;
+  max-width: 800px;
+  min-width: 600px;
   padding: 20px;
+  margin: 0 auto;
 }
 .search-bar {
   max-width: 400px;
@@ -80,4 +82,7 @@ h1 {
 .temp-convert-btn:hover {
   transform: scale(1.06);
   background-color: rgb(0, 238, 255);
+}
+.sign {
+  text-align: center;
 }
